flex-grid overflow-y fix

--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ figure.sux h4 {margin-top:-12px;}
   /* PHASE HEADINGS */
   .flex-grid .headings {font-size:0;list-style:none;padding:10px 0 0;width:max-content;}
   .flex-grid .headings li {display:inline-block;border-bottom:2px solid var(--text-med);font-size:1.3rem;margin-right:40px;padding-bottom:10px;position:relative;text-align:center;width:350px;}
-  .flex-grid .headings li::after {border-right:2px dashed var(--text-ultra-faint);content:'';display:block;position:absolute;top:0;right:-20px;height:calc(100% + 15px + 210px * 7);}
+  .flex-grid .headings li::after {border-right:2px dashed var(--text-ultra-faint);content:'';display:block;position:absolute;top:0;right:-20px;height:calc(100% + 15px + 212px * 6);}
   .flex-grid .headings li:last-child {padding-left:200px;text-align:left;width:calc(100vw - 710px);min-width:270px;}
   .flex-grid .headings li:last-child::after {content:unset;}
 
